--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -80,7 +80,7 @@
                         <div class="page-contact">
                             <a href="mailto:info@leskraft.ru">info@leskraft.ru</a>
                         </div>
-                        <button type="button" class="btn main-btn main-btn--link mod-open-btn" data-modal>
+                        <button type="button" class="btn main-btn main-btn--link mod-open-btn" data-modal="feedback-modal">
                             Написать нам
                             <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
                         </button>
