--- a/#src/_other-cat.html
+++ b/#src/_other-cat.html
@@ -5,7 +5,7 @@
             <h2 class="h1">@@title</h2>
             @@if(btn === true) {
             <a href="#" class="btn stroke-btn stroke-btn--link">
-                <span class="mobile-hidden">Смотреть </span>
+                <span class="mobile-hidden">Смотреть&nbsp;</span>
                 <span>все</span>
                 <span class="link-icon"></span>
             </a>
