--- a/#src/errormodal.html
+++ b/#src/errormodal.html
@@ -59,8 +59,8 @@
                         <div class="sec-top">
                             <h2 class="h1"><span>Популярные</span> категории</h2>
                             <a href="#" class="btn stroke-btn stroke-btn--link">
-                                <span>Все </span>
-                                <span class="mobile-hidden">категории</span>
+                                <span>Все</span>
+                                <span class="mobile-hidden">&nbsp;категории</span>
                                 <span class="link-icon"></span>
                             </a>
                         </div>
@@ -80,7 +80,7 @@
                         <div class="sec-top">
                             <h2 class="h1">Новинки</h2>
                             <a href="#" class="btn stroke-btn stroke-btn--link">
-                                <span class="mobile-hidden">Смотреть </span>
+                                <span class="mobile-hidden">Смотреть&nbsp;</span>
                                 <span>все</span>
                                 <span class="link-icon"></span>
                             </a>
