--- a/#src/service.html
+++ b/#src/service.html
@@ -85,9 +85,9 @@
                         <div class="sec-top">
                             <h2 class="h1">Другие услуги</h2>
                             <div class="btn stroke-btn stroke-btn--link">
-                                <span class="mobile-hidden">Смотреть </span>
+                                <span class="mobile-hidden">Смотреть&nbsp;</span>
                                 <span>все</span>
-                                <div class="link-icon"></div>
+                                <span class="link-icon"></span>
                             </div>
                         </div>
                         <div class="swiper">
