--- a/#src/product.html
+++ b/#src/product.html
@@ -204,23 +204,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__content">
-                                <div class="read-more">
-                                    <div class="read-more__content">
-                                        <p>Строганая доска из сосны со скруглёнными краями — это универсальный пиломатериал, который находит широкое применение в различных
-                                            сферах. Благодаря обработке строганием, поверхность доски становится гладкой и ровной, что делает её идеальной для видимых
-                                            элементов конструкций, таких как: Отделка интерьера и экстерьера: Используется для обшивки стен и потолков, изготовления
-                                            вагонки,
-                                            половых покрытий, декоративных элементов, а также для создания беседок и террас. Закруглённые края придают изделиям более
-                                            эстетичный и безопасный вид.</p>
-                                    </div>
-                                    <button type="button" class="text-btn read-more__btn" data-open="Читать далее" data-close="Свернуть">
+                            <div class="product__main">
+                                <div class="product__content">
+                                    <p>Строганая доска из сосны со скруглёнными краями — это универсальный пиломатериал, который находит широкое применение в различных
+                                        сферах. Благодаря обработке строганием, поверхность доски становится гладкой и ровной, что делает её идеальной для видимых
+                                        элементов конструкций, таких как: Отделка интерьера и экстерьера: Используется для обшивки стен и потолков, изготовления
+                                        вагонки, половых покрытий, декоративных элементов, а также для создания беседок и террас. Закруглённые края придают изделиям более
+                                        эстетичный и безопасный вид.</p>
+                                    <a href="#info-product" class="btn js-anchor text-btn" data-tab="1">
                                         <span>Читать далее</span>
                                         <svg><use xlink:href="img/svg/sprite.svg#chevron-bot"></use></svg>
-                                    </button>
+                                    </a>
                                 </div>
-                                <dl class="read-more prod-details">
-                                    <div class="read-more__content">
+                                <div class="product__details">
+                                    <dl class="prod-details">
                                         <div class="prod-details__item">
                                             <dt>Артикул</dt>
                                             <dd>171916</dd>
@@ -242,35 +239,15 @@
                                             <dt>1 упаковка</dt>
                                             <dd>10 шт / 192 м²</dd>
                                         </div>
-                                        <div class="prod-details__item">
-                                            <dt>Вид товара</dt>
-                                            <dd>Вагонка</dd>
-                                        </div>
-                                        <div class="prod-details__item">
-                                            <dt>Сорт</dt>
-                                            <dd>AB</dd>
-                                        </div>
-                                        <div class="prod-details__item">
-                                            <dt>Классификация</dt>
-                                            <dd>Стандарт</dd>
-                                        </div>
-                                        <div class="prod-details__item">
-                                            <dt>Ширина</dt>
-                                            <dd>20 см</dd>
-                                        </div>
-                                        <div class="prod-details__item">
-                                            <dt>Длина</dt>
-                                            <dd>2000 см</dd>
-                                        </div>
-                                    </div>
-                                    <button type="button" class="text-btn read-more__btn" data-open="Все характеристики" data-close="Свернуть">
+                                    </dl>
+                                    <a href="#info-product" class="btn js-anchor text-btn" data-tab="2">
                                         <span>Все характеристики</span>
                                         <svg><use xlink:href="img/svg/sprite.svg#chevron-bot"></use></svg>
-                                    </button>
-                                </dl>
+                                    </a>
+                                </div>
                             </div>
                             <div class="switch-block info-product">
-                                <div class="tabs-scroll">
+                                <div class="tabs-scroll" id="info-product">
                                     <div class="tabs">
                                         <span class="h3 active" data-tab="1">Описание</span>
                                         <span class="h3" data-tab="2">Характеристики</span>
@@ -461,7 +438,8 @@
                                                         <h5>По банковским реквизитам</h5>
                                                         <div class="tippy">
                                                             <svg><use xlink:href="img/svg/sprite.svg#tippy"></use></svg>
-                                                            <p>Оплатите заказ банковским переводом. Введите указанные реквизиты в приложении вашего банка или в отделении банка</p>
+                                                            <p>Оплатите заказ банковским переводом. Введите указанные реквизиты в приложении вашего банка или в отделении
+                                                                банка</p>
                                                         </div>
                                                     </div>
                                                 </div>
