--- a/#src/_header.html
+++ b/#src/_header.html
@@ -73,10 +73,10 @@
                     </div>
                     <div class="header__actions">
                         <a href="#" class="header__fav" aria-label="Перейти в избранные"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg></a>
-                        <button type="button" class="header__profile mod-open-btn" aria-label="Войти" data-modal="login-modal">
+                        <!--<button type="button" class="header__profile mod-open-btn" aria-label="Войти" data-modal="login-modal">
                             <svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg>
                         </button>
-                        <!-- <a href="#" class="header__profile" aria-label="Личный кабинет"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></a>  -->
+                         <a href="#" class="header__profile" aria-label="Личный кабинет"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></a>  -->
                         <a href="#" class="header__cart" aria-label="Перейти в корзину">
                             <svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg>
                             <span>6</span>
