--- a/#src/_modal.html
+++ b/#src/_modal.html
@@ -300,8 +300,8 @@
             <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg><span>Главная</span></a></li>
             <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg><span>Каталог</span></a></li>
             <li><a href><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Профиль</span></a></li> -->
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Войти</span></button></li>
+            <!-- <li><a href="profile.html"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Профиль</span></a></li> 
+            <li><button class="btn mod-open-btn" data-modal="account-modal"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Войти</span></button></li>-->
             <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>Корзина</span></a></li>
         </ul>
     </div>
