--- a/lescraft/showrooms.html
+++ b/lescraft/showrooms.html
@@ -109,10 +109,10 @@
                     </div>
                     <div class="header__actions">
                         <a href="#" class="header__fav" aria-label="Перейти в избранные"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg></a>
-                        <button type="button" class="header__profile mod-open-btn" aria-label="Войти" data-modal="login-modal">
+                        <!--<button type="button" class="header__profile mod-open-btn" aria-label="Войти" data-modal="login-modal">
                             <svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg>
                         </button>
-                        <!-- <a href="#" class="header__profile" aria-label="Личный кабинет"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></a>  -->
+                         <a href="#" class="header__profile" aria-label="Личный кабинет"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></a>  -->
                         <a href="#" class="header__cart" aria-label="Перейти в корзину">
                             <svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg>
                             <span>6</span>
@@ -1231,8 +1231,8 @@
             <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg><span>Главная</span></a></li>
             <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg><span>Каталог</span></a></li>
             <li><a href><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Профиль</span></a></li> -->
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Войти</span></button></li>
+            <!-- <li><a href="profile.html"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Профиль</span></a></li> 
+            <li><button class="btn mod-open-btn" data-modal="account-modal"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Войти</span></button></li>-->
             <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>Корзина</span></a></li>
         </ul>
     </div>
