range val, filter, scrollbar,modal, city confirm

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="header__bot">
+            <!-- <div class="header__bot">
                 <ul>
                     <li><a href="#">Новинки</a></li>
                     <li><a href="#">Отделочные материалы</a></li>
@@ -93,7 +93,7 @@
                     <li><a href="#">Экзотические породы</a></li>
                     <li><a href="#">Для бани и сауны</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         @@include("_main-menu.html")
     </header>
