--- a/#src/_modal.html
+++ b/#src/_modal.html
@@ -20,6 +20,21 @@
         </div>
     </div>
 </div>
+<!--city-confirm-modal-->
+<div class="custom-scroll modal city-confirm-modal" id="city-confirm-modal">
+    <div class="modal__content">
+        <button type="button" class="btn-cross modal__close"></button>
+        <div class="modal__top">
+            <h3>Ваш город Краснодар?</h3>
+        </div>
+        <div class="custom-scroll modal__scroll">
+            <div class="modal__btns">
+                <button type="button" class="btn main-btn modal__close">Да</button>
+                <button type="button" class="btn stroke-btn mod-open-btn" data-modal="city-modal">Нет</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!--city-modal-->
 <div class="custom-scroll modal city-modal" id="city-modal">
     <div class="modal__content">
