--- a/#src/about.html
+++ b/#src/about.html
@@ -85,7 +85,8 @@
                         <div class="sec-top">
                             <h2 class="h1">Видео о&nbsp;компании</h2>
                             <div class="sec-top__content">
-                                <p>Узнайте, как мы помогаем нашим клиентам успешно реализовывать строительные проекты, предоставляя качественные материалы и&nbsp;профессиональную
+                                <p>Узнайте, как мы помогаем нашим клиентам успешно реализовывать строительные проекты, предоставляя качественные материалы
+                                    и&nbsp;профессиональную
                                     поддержку на каждом этапе.</p>
                                 <div class="fancy-block">
                                     <div class="btn video-btn" data-fancy="video-about" data-src="media/product-1-1.mp4" data-type="video" data-fit="media-contain">
@@ -176,6 +177,15 @@
                                 Узнать больше
                                 <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
                             </a>
+                        </div>
+                        <div class="geo-about__map">
+                            <picture>
+                                <source srcset="img/about-map.webp" type="image/webp" media="(min-width: 700.98px)">
+                                <source srcset="img/about-map.png" media="(min-width: 700.98px)">
+                                <source srcset="img/about-map-mob.webp" type="image/webp">
+                                <source srcset="img/about-map-mob.png">
+                                <img src="img/about-map.png" alt="">
+                            </picture>
                         </div>
                     </div>
                 </section>
