--- a/#src/subcategory.html
+++ b/#src/subcategory.html
@@ -61,6 +61,7 @@
                                     </div>
                                     <button type="button" class="text-btn read-more__btn" data-open="Развернуть" data-close="Свернуть">
                                         <span>Развернуть</span>
+                                        <svg><use xlink:href="img/svg/sprite.svg#chevron-bot"></use></svg>
                                     </button>
                                 </div>
                             </div>
