--- a/#src/_head.html
+++ b/#src/_head.html
@@ -11,7 +11,7 @@
     <link sizes="180x180" rel="apple-touch-icon" href="img/favicon/apple-icon-180x180.png">
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin> 
+    <link rel="preload" href="fonts/InterDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin> 
     <link href="css/style.min.css" type="text/css" rel="stylesheet">
     <title>@@title</title>
 </head>
