--- a/#src/payment.html
+++ b/#src/payment.html
@@ -114,10 +114,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="swiper-nav">
-                                    <button type="button" class="nav-btn nav-btn--prev"><svg><use xlink:href="img/svg/sprite.svg#btn-prev"></use></svg></button>
-                                    <button type="button" class="nav-btn nav-btn--next"><svg><use xlink:href="img/svg/sprite.svg#btn-next"></use></svg></button>
-                                </div>
+                                <div class="swiper-scrollbar"></div>
                             </div>
                         </section>
                         <!--payment-p__sec-->
