--- a/#src/service.html
+++ b/#src/service.html
@@ -107,10 +107,7 @@
                                     'Если наш склад — в вашем городе, а товар&nbsp;— в&nbsp;наличии, мы доставим материалы в&nbsp;течение 24 часов после оформления заказа. В населённые пункты Краснодарского, Ставропольского края и в республику Крым доставим заказ в течение недели. Если материалы нужны срочно — доставим по городу и в ближайшие населённые пункты в день заказа'})
                                 </div>
                             </div>
-                            <div class="swiper-nav">
-                                <button type="button" class="nav-btn nav-btn--prev"><svg><use xlink:href="img/svg/sprite.svg#btn-prev"></use></svg></button>
-                                <button type="button" class="nav-btn nav-btn--next"><svg><use xlink:href="img/svg/sprite.svg#btn-next"></use></svg></button>
-                            </div>
+                            <div class="swiper-scrollbar"></div>
                         </div>
                     </div>
                 </section>
