--- a/lescraft/about.html
+++ b/lescraft/about.html
@@ -14,7 +14,7 @@
     <link sizes="180x180" rel="apple-touch-icon" href="img/favicon/apple-icon-180x180.png">
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin> 
+    <link rel="preload" href="fonts/InterDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin> 
     <link href="css/style.min.css" type="text/css" rel="stylesheet">
     <title>О компании</title>
 </head>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <div class="header__bot">
+            <!-- <div class="header__bot">
                 <ul>
                     <li><a href="#">Новинки</a></li>
                     <li><a href="#">Отделочные материалы</a></li>
@@ -129,7 +129,7 @@
                     <li><a href="#">Экзотические породы</a></li>
                     <li><a href="#">Для бани и сауны</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         <!--main-menu-->
 <div class="main-menu fixed-block">
@@ -543,7 +543,8 @@
                         <div class="sec-top">
                             <h2 class="h1">Видео о&nbsp;компании</h2>
                             <div class="sec-top__content">
-                                <p>Узнайте, как мы помогаем нашим клиентам успешно реализовывать строительные проекты, предоставляя качественные материалы и&nbsp;профессиональную
+                                <p>Узнайте, как мы помогаем нашим клиентам успешно реализовывать строительные проекты, предоставляя качественные материалы
+                                    и&nbsp;профессиональную
                                     поддержку на каждом этапе.</p>
                                 <div class="fancy-block">
                                     <div class="btn video-btn" data-fancy="video-about" data-src="media/product-1-1.mp4" data-type="video" data-fit="media-contain">
@@ -634,6 +635,15 @@
                                 Узнать больше
                                 <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
                             </a>
+                        </div>
+                        <div class="geo-about__map">
+                            <picture>
+                                <source srcset="img/about-map.webp" type="image/webp" media="(min-width: 700.98px)">
+                                <source srcset="img/about-map.png" media="(min-width: 700.98px)">
+                                <source srcset="img/about-map-mob.webp" type="image/webp">
+                                <source srcset="img/about-map-mob.png">
+                                <img src="img/about-map.png" alt="">
+                            </picture>
                         </div>
                     </div>
                 </section>
@@ -766,10 +776,7 @@
 </div>
                 </div>
             </div>
-            <div class="swiper-nav">
-                <button type="button" class="nav-btn nav-btn--prev"><svg><use xlink:href="img/svg/sprite.svg#btn-prev"></use></svg></button>
-                <button type="button" class="nav-btn nav-btn--next"><svg><use xlink:href="img/svg/sprite.svg#btn-next"></use></svg></button>
-            </div>
+            <div class="swiper-scrollbar"></div>
         </div>
     </div>
 </section>
@@ -985,6 +992,21 @@
         <div class="cookie__btns">
             <button class="btn main-btn" onclick="unshowCookie()">Отлично</button>
             <a href="#" class="btn text-btn">Подробнее</a>
+        </div>
+    </div>
+</div>
+<!--city-confirm-modal-->
+<div class="custom-scroll modal city-confirm-modal" id="city-confirm-modal">
+    <div class="modal__content">
+        <button type="button" class="btn-cross modal__close"></button>
+        <div class="modal__top">
+            <h3>Ваш город Краснодар?</h3>
+        </div>
+        <div class="custom-scroll modal__scroll">
+            <div class="modal__btns">
+                <button type="button" class="btn main-btn modal__close">Да</button>
+                <button type="button" class="btn stroke-btn mod-open-btn" data-modal="city-modal">Нет</button>
+            </div>
         </div>
     </div>
 </div>
