--- a/lescraft/category.html
+++ b/lescraft/category.html
@@ -666,12 +666,12 @@
                                         <div class="range-filter__amounts">
                                             <div class="range-filter__amount">
                                                 <span>от</span>
-                                                <input type="number" min="20" max="290" placeholder="20" value="20"
+                                                <input type="number" min="20" max="290" placeholder="20"
                                                     class="range-filter__start">
                                             </div>
                                             <div class="range-filter__amount">
                                                 <span>до</span>
-                                                <input type="number" min="20" max="290" placeholder="290" value="290"
+                                                <input type="number" min="20" max="290" placeholder="290"
                                                     class="range-filter__end">
                                             </div>
                                         </div>
@@ -694,12 +694,12 @@
                                         <div class="range-filter__amounts">
                                             <div class="range-filter__amount">
                                                 <span>от</span>
-                                                <input type="number" min="20" max="290" placeholder="20" value="20"
+                                                <input type="number" min="20" max="290" placeholder="20"
                                                     class="range-filter__start">
                                             </div>
                                             <div class="range-filter__amount">
                                                 <span>до</span>
-                                                <input type="number" min="20" max="290" placeholder="290" value="290"
+                                                <input type="number" min="20" max="290" placeholder="290"
                                                     class="range-filter__end">
                                             </div>
                                         </div>
@@ -722,12 +722,12 @@
                                         <div class="range-filter__amounts">
                                             <div class="range-filter__amount">
                                                 <span>от</span>
-                                                <input type="number" min="20" max="290" placeholder="20" value="20"
+                                                <input type="number" min="20" max="290" placeholder="20"
                                                     class="range-filter__start">
                                             </div>
                                             <div class="range-filter__amount">
                                                 <span>до</span>
-                                                <input type="number" min="20" max="290" placeholder="290" value="290"
+                                                <input type="number" min="20" max="290" placeholder="290"
                                                     class="range-filter__end">
                                             </div>
                                         </div>
@@ -749,12 +749,12 @@
                                         <div class="range-filter__amounts">
                                             <div class="range-filter__amount">
                                                 <span>от</span>
-                                                <input type="number" min="20" max="300" placeholder="20" value="20"
+                                                <input type="number" min="20" max="300" placeholder="20"
                                                     class="range-filter__start">
                                             </div>
                                             <div class="range-filter__amount">
                                                 <span>до</span>
-                                                <input type="number" min="20" max="300" placeholder="300" value="300"
+                                                <input type="number" min="20" max="300" placeholder="300" 
                                                     class="range-filter__end">
                                             </div>
                                         </div>
